--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,25 @@
 # \u5E94\u7528\u670D\u52A1 WEB \u8BBF\u95EE\u7AEF\u53E3
 server.port=10088
 
+# \u6570\u636E\u5E93\u8FDE\u63A5\u914D\u7F6E
+spring.datasource.url=jdbc:mysql://127.0.0.1:12100/shahe_hospital?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
+spring.datasource.username=bunny
+spring.datasource.password=bunny
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA/Hibernate \u914D\u7F6E
+# \u81EA\u52A8\u521B\u5EFA/\u66F4\u65B0\u6570\u636E\u5E93\u8868\u7ED3\u6784
+spring.jpa.hibernate.ddl-auto=update
+# \u663E\u793ASQL\u8BED\u53E5
+spring.jpa.show-sql=true
+# \u683C\u5F0F\u5316SQL\u8BED\u53E5
+spring.jpa.properties.hibernate.format_sql=true
+# \u6570\u636E\u5E93\u65B9\u8A00
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# \u8FDE\u63A5\u6C60\u914D\u7F6E
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
