--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
                 <version>${spring-boot.version}</version>
                 <configuration>
                     <mainClass>com.proshine.shahecommunityhospital.ShaHeCommunityHospitalApplication</mainClass>
-                    <skip>true</skip>
+                    <skip>false</skip>
                 </configuration>
                 <executions>
                     <execution>
